# ha-parqet-companion

./: .eslintrc.json  .gitignore  README.md  hacs.json  package-lock.json  package.json  pyproject.toml  rollup.config.js  tsconfig.json
.github/workflows/: ci.yml  hassfest.yml  release.yml  validate.yml
custom_components/parqet/: __init__.py  api.py  calendar.py  config_flow.py  const.py  coordinator.py  diagnostics.py  entity.py  manifest.json  oauth.py  sensor.py  snapshot.py  snapshot_ws.py  strings.json  websocket_api.py
custom_components/parqet/frontend/: __init__.py  parqet-card.js
custom_components/parqet/translations/: de.json  en.json
docs/: parqet_connect_api.json
src/: const.ts  diagnostics-frontend.ts  discovery.test.ts  discovery.ts  parqet-card.ts  parqet-snapshot-card.test.ts  parqet-snapshot-card.ts  types.ts  utils.ts
src/components/: donut-chart.ts  interval-selector.ts  loading-spinner.ts  portfolio-selector.ts  stacked-bar.ts
src/views/: activities-view.ts  holdings-view.test.ts  holdings-view.ts  performance-view.test.ts  performance-view.ts
tests/: __init__.py  conftest.py  test_api.py  test_calendar.py  test_config_flow.py  test_coordinator.py  test_diagnostics.py  test_frontend.py  test_init.py  test_sensor.py  test_snapshot.py  test_snapshot_ws.py
